# Silixel

./: .gitignore
Refactor/: CMakeLists.txt  main.cpp
src/: simul_vulkan.cc  simul_vulkan.h
src/vulkan/: sh_init.comp  sh_init.spv  sh_outports.comp  sh_outports.spv  sh_posedge.comp  sh_posedge.spv  sh_simul.comp  sh_simul.spv
